[project]
name = "data-processing-tools"
version = "2.0.0"
description = "Excel CSV cleaning and matching toolkit with GUI and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "鄭桓"}]
dependencies = [
  "pandas==2.2.*",
  "openpyxl==3.1.*",
  "rapidfuzz==3.*",
  "chardet==5.*",
  "PyQt5==5.*"
]

[project.scripts]
excel-tools = "dptools.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dptools*"]

[project.urls]
Homepage = "https://github.com/Avon46/data-processing-tools"
Repository = "https://github.com/Avon46/data-processing-tools.git"
Issues = "https://github.com/Avon46/data-processing-tools/issues"
